<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TripNDroid Settings</string>

    <string name="category_tdf_title">TripNDroid Framework</string>
    <string name="powersaving_active_title_head">Powersaving mode</string>
    <string name="powersaving_active_summary_head">Use TDF powersaving mode to save power and still use the device properly</string>

    <string name="ts_fix_title_head">Touchscreen fix</string>
    <string name="ts_fix_summary_head">Enable or disable the tdf touchscreen multitouch fix</string>

    <string name="category_s2w_title">Sweep2Wake</string>
    <string name="s2w_switch_title_head">Enable</string>
    <string name="s2w_switch_summary_head">Switch phone screen on/off with a swipe over the capacitive buttons</string>

    <string name="category_usb_title">USB</string>
    <string name="fastcharge_title_head">Fast Charge</string>
    <string name="fastcharge_summary_head">Charge phone like its connected to AC</string>

    <string name="category_backlightdisable_title">Backlight</string>
    <string name="backlightdisable_title_head">Disable Button Backlight</string>
    <string name="backlightdisable_summary_head">Select to disable the capacitive button backlight</string>
    <string name="backlightnotification_title_head">Button Backlight Notification</string>
    <string name="backlightnotification_summary_head">Select to enable the capacitive button backlight for Notification events</string>

    <string name="category_smartdimmer_title">nVidia SmartDimmer</string>
    <string name="smartdimmer_switch_title_head">Enable</string>
    <string name="smartdimmer_switch_summary_head">Switch nVidia SmartDimmer on/off</string>

</resources>
