<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- defaultValues need to be in sync with the default kernel values! -->

	<PreferenceCategory
    	android:title="@string/category_tdf_title">
	    <!-- tdf Options -->
	    <CheckBoxPreference
	        android:key="powersave_active"
	        android:title="@string/powersaving_active_title_head"
	        android:summary="@string/powersaving_active_summary_head"
	        android:defaultValue="0" />
	</PreferenceCategory>

	    <CheckBoxPreference
	        android:key="ts_fix"
	        android:title="@string/ts_fix_title_head"
	        android:summary="@string/ts_fix_summary_head"
	        android:defaultValue="1" />

	<PreferenceCategory
    	android:title="@string/category_s2w_title">
	    <!-- s2w switch Options -->
	    <CheckBoxPreference
	        android:key="s2w_switch"
	        android:title="@string/s2w_switch_title_head"
	        android:summary="@string/s2w_switch_summary_head"
	        android:defaultValue="1" />
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_usb_title">
	    <!-- Fastcharge Options -->
	    <CheckBoxPreference
	        android:key="fastcharge"
	        android:title="@string/fastcharge_title_head"
	        android:summary="@string/fastcharge_summary_head"
	        android:defaultValue="0" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_backlightdisable_title">
	    <!-- Backlight Disable Options -->
	    <CheckBoxPreference
	        android:key="backlight_disable"
	        android:title="@string/backlightdisable_title_head"
	        android:summary="@string/backlightdisable_summary_head"
	        android:defaultValue="0" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_smartdimmer_title">
	    <!-- SmartDimmer Switch Options -->
	    <CheckBoxPreference
	        android:key="smartdimmer_switch"
	        android:title="@string/smartdimmer_switch_title_head"
	        android:summary="@string/smartdimmer_switch_summary_head"
	        android:defaultValue="1" />
	</PreferenceCategory>
</PreferenceScreen>
